# personal-dev-env

./: .env  .gitignore  .pre-commit-config.yaml  2026-01-17-tmux-window-layout.md  IMPROVEMENT-PLAN.md  Makefile  README.md  REVIEW.md  docker-compose.yml  install.sh
.claude/: .gitignore  CLAUDE.md  README.md  settings.json  statusline.sh  sync-docs.py
ai/: AGENTS.md  README.md
ai-profiles/: .gitignore  auth.json  default.toml  litellm-template.toml
artifacts/: commit-message.txt
cli/: cmd_install.go  cmd_vault.go  cmd_vault_test.go  config.go  config_test.go  file_helpers.go  go.mod  install_ai_runtime.go  install_ai_runtime_test.go  install_ai_tools.go  install_config.go  (+16 more)
surveil/: Cargo.toml  README.md
surveil/src/: chunk.rs  cli.rs  code.rs  configs.rs  gather.rs  index.rs  markdown.rs  research.rs  schema.rs  source.rs  taskfile.rs
surveil/src/chunk/: code.rs  configs.rs  markdown.rs
surveil/src/research/: output.rs  rank.rs  scan.rs  setup.rs  tokenize.rs
surveil/tests/: research_cli.rs
vibe/: Cargo.toml  Makefile  README.md
vibe/docker/: Dockerfile  run-agent.sh
vibe/extensions/: git-snapshot.mjs  jsonl-observer.mjs  stderr-progress.mjs  stderr-progress.test.mjs
vibe/hooks/: post-commit
vibe/src/: app.rs  cli.rs  docker.rs  git.rs  ledger.rs  main.rs  observe.rs  output.rs  paths.rs  planner.rs  prompt.rs  prompts.rs  result.rs  run.rs  runtime.rs  sandbox.rs  snapshot.rs  state.rs  worktree.rs
vibe/src/adapters/: docker.rs  git.rs  mod.rs  runtime.rs
vibe/testdata/: pi-events-sample.jsonl
vibe/tests/: run_command.rs  support.rs
(+266 files in other folders)
