[package]
name = "surveil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "surveil"
path = "src/cli.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
